# ml_model_on_fastapi

./: README.md  run.sh
.github/workflows/: tests.yml
mlapi/: Dockerfile  README.rst  pyproject.toml
mlapi/infra/: 01_namespace.yaml  02_deployment-pythonapi.yaml  03_deployment-redis.yaml  04_service-redis.yaml  05_service-prediction.yaml
mlapi/src/: main.py
mlapi/tests/: test_lab_hello.py  test_lab_predict.py
trainer/: model_pipeline.pkl  train.py
