[tool.poetry]
name = "src"
version = "0.1.0"
description = "ML API implementation"
authors = ["viswanathan"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
fastapi = "=0.75.2"
requests = "^2.27.1"
uvicorn = "^0.17.6"
scipy = "^1.8"
scikit-learn = "1.1.1"
joblib = "^1.1.0"
numpy = "^1.22.4"
fastapi-redis-cache = "^0.2.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
